# Steel_Detailer_AI

./: .gitignore  Dockerfile  FedEx_Ladders_FSF_Analysis.md  PROJECT_Ladders_FSF_Analysis.md  Program.cs  README.md  Steel Detailer AI.csproj  Steel Detailer AI.sln  database_schema.sql  handoff_032826.md  handoff_033126.md  pyproject.toml  qa_config.json  sds2_qaqc_launcher.py  setup_steel_detailer_ai.py
Properties/: launchSettings.json
memory_bank_mcp/: __main__.py  server.py
qa_qc_verify/: __init__.py  __main__.py  command.py  config.py  cross_reference.py  error_prompts.py  kiss_parser.py  pdf_extractor.py  project_scanner.py  report.py  run.py  scan_runner.py  statistics.py  utils.py
qa_qc_verify/checks/: bom_reconciliation.py  erection_continuity.py  mark_verification.py  sheet_boundary.py
qa_qc_verify/utils/: helpers.py
sds tooling/: Automator1_BulkPropertyUpdater.cs  BulkUpdaterLauncher.py  Checker1Launcher.py  Checker1_PreDetailModelVerify.cs  Checker2_PostDetailSheetVerify.cs  VerifyBOM.cs  agents.md  goals.md  implementation.md  package-lock.json  package.json  progress.md  readme.md  scraper.js  setup.bat  tasks.md  todo.md
sds tooling/.agents/workflows/: steelcheck.md
sds tooling/Checker1/: Program.cs
sds tooling/Checker2/: Checker2.csproj  Program.cs
sds tooling/output/2025-1/Tutorials/addweld/: addweld.md
sds tooling/output/2025-1/Tutorials/changelog/: changelog.md
sds tooling/output/2025-1/Tutorials/connectioncube/: connectioncube.md
sds tooling/output/2025-1/Tutorials/index/: index.md
steel_detailer_mcp/: __main__.py  server.py
(+842 files in other folders)
